--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -31,27 +31,43 @@
     }
    
 } */
-@media(max-width:626px){
-    .container_box2{
-        background-color: blue;
-    }
+ @media(max-width:600px){
+ 
     .container_box2{
         flex-wrap: wrap;
         justify-content: center;
+        gap: 20px;
     }  
-    .box1{
-        width: 80%;
+    .boxbox:nth-child(1){
+        background-color: red;
+        width: 90%;
     }
     .box{
+        background-color: yellow;
         width: 30%;
         justify-content:space-between
     }
- 
+    .burger{
+        display: block;
     }
+    .navigation{
+        display: none;
+    }
+ 
+    } 
+  
 
 
-
-
+ /* @media(max-width:400px){
+    
+    .burger{
+        display: block;
+    }
+    .navigation{
+        display: none;
+    }
+    
+} */
 
 
 
