--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -55,10 +55,10 @@
     }
  
     } 
-  
+/*   
 
 
- /* @media(max-width:400px){
+ @media(max-width:400px){
     
     .burger{
         display: block;
