--- a/styles/style.css
+++ b/styles/style.css
@@ -155,11 +155,11 @@ header{
       
  
     }
-    /* .container-box{
+    .container-box{
        position: relative;
        background-color: pink;
      
-    } */
+    }
     .chat_icon{
        width: 90px;
        height: 60px;
