--- a/styles/style.css
+++ b/styles/style.css
@@ -70,16 +70,18 @@ header{
 
    li{
       display: inline;
-      margin: 10px;
+      margin: 15px;
    }
-   
+/*    
    .nav_li{
-      margin-right: 25px;
-   }
+      margin-right: 15px;
+   } */
 
  /* .test{
    display: inline-flex;
  } */
+
+
  /* body{
   font-family: ;
  } */
@@ -98,8 +100,46 @@ header{
     margin-bottom: 5px;
     margin-left: 5px;
  }
+main.divaider{
+    background-color: azure;
+}
+main.wrapper{
+  background-color:azure;
+}
+ div.VideoElement{  
+   display:inline-block; 
+   margin-top: 120px;
+   margin-left: 20px; 
+   margin-right: 20px; 
+   border: 7px solid  hsl(244, 100%, 80%);
+   background-color: hsl(15, 100%, 80%) ;
+ }
+ div.VideoTest{
+   display: inline-block;
+   margin-top: 50px; 
+   margin-left: 20px;
+   margin-right: 20px; 
+   border: 7px solid   #0007cc;
+   background-color:  #66cc00;
+ }
  
-
+ div.vebinari{
+   display:inline-block;
+   margin-top: 50px;
+   margin-left: 20px;
+   margin-right: 20px; 
+   margin-bottom: 20px;
+   background-color: aqua; 
+   border: 7px solid  		rgb(102, 0, 204);
+ }
+ div.masala{
+   display:inline-block; 
+   margin-top: 50px;
+   margin-left: 20px; 
+   margin-right: 20px; 
+   border: 7px solid  hsl(0, 100%, 80%);
+   background-color: hsl(50, 100%, 80%) ;
+ }
  
  iframe{
     margin-top: 80px;
@@ -107,8 +147,7 @@ header{
     margin-bottom: 45px;
  
  }
- 
- 
+
  .contact{
     display: block;
     margin-bottom: 15px;
@@ -130,30 +169,115 @@ header{
        right: 60px;
        z-index: -1; 
     }
-    .wrapper{
-       /* display: flex;
-       justify-content: center;
-       align-items: center; */
-       padding: 25px;
-       
-       background-color:rgb(233, 255, 192);
-       display: inline-flex;
-     
-    }
+  
     .fa-brands{
       display: inline-block;
       font-size: 25px;
-
     }
     /* body {
       line-height: 1;
   }
      */
-   .par{
+   .par{    
       display: inline-flex;
+      text-align: justify;
       font-size: 20px;
       margin-top: 80px;
       margin-left: 50px;
       border-bottom: 40px;
       padding-bottom: 20px;
+      gap: 25px;
      }
+     .par1{
+      background-color: cornsilk;
+      width: 500px;     
+      text-align: justify;
+      font-size: 20px;
+      margin-top: 80px;
+      margin-left: 50px;
+      border-bottom: 40px;
+      padding-bottom: 20px;
+      gap: 25px;
+      
+     }
+  
+     .container_boxs{
+      display: flex;
+     }
+     .box1{
+      width:1200px;
+      margin: 10px;
+      padding: 20px;
+      background-color: palegreen;
+      border: 4px solid black;
+    }
+    .box2{
+      width:1200px;   
+      margin: 10px;
+      padding: 20px;
+      background-color: grey;
+      border: 4px solid black;
+    }
+    .box3{
+      width:1200px;
+      margin: 10px;
+      padding: 20px;         
+      background-color: beige;
+      border: 4px solid black;
+    }
+    .positioned{
+      display: inline-block;
+      position:relative ;
+      background-color: peachpuff;
+      padding: 20px;
+      left:200px;
+    }
+    .positioned1{
+      background-color: aquamarine;
+      position: relative;
+      top: 0px;
+      left:400px;
+    }
+  
+ .Foucault{
+  float: left;
+  width: 150px;
+  height:150px;
+  margin: 15px;
+ }
+ .uku{
+  float: left;
+  width: 220px;
+  height:120px;
+  margin: 15px;
+ }
+ .mizkan11{ 
+   float: left;
+  width:220px;
+  height:120px;
+  margin: 15px;
+}
+.mizkan1{ 
+  float: left;
+ margin: 15px;
+}
+.drekadobaHuki{
+  float: left;
+  width:220px;
+  height:120px;
+  margin: 15px;
+}
+.khakhuni{
+  float: left;
+  width:150px;
+  height:80px;
+  margin: 15px;
+ 
+}
+.tsonatsoroba{
+  float: left;
+  width: 150px;
+  height:90px;
+  margin: 15px;
+ 
+}
