--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,16 @@
+
+ /* body{
+  padding: 50px;
+ } */
+
+
+
 header{
     display: flex;
     justify-content:space-between;
     align-items: center;
     background-color: rgb(192, 255, 241);
-    font-size: 30px;
+    font-size: 20x;
     color: slategrey;
     position: fixed;
     width: 100%;
@@ -11,11 +18,14 @@ header{
     left:0 ;   
  }
 
+
+
  .logo_image{
    width:40px;
    margin-left: 10px;
-
 }
+
+
 
 .Newtones_cradle{
    margin-top: 80px;
@@ -36,7 +46,6 @@ header{
    display: flex;
    justify-content: space-around;
    align-items: end;
-
   }
 
   b,strong{
@@ -49,14 +58,13 @@ header{
 
   a{
    text-decoration: none;
- }
+   }
    
    
  .navigation ul{
    display: flex;
    margin-top: 30px;
-   margin-right: 30px;
-   
+   margin-right: 30px;   
    }
 
    .burger{
@@ -82,30 +90,30 @@ header{
  } */
 
 
- /* body{
-  font-family: ;
- } */
 
  .Newtones_cradle{
    font-size: 20px;
    display: inline-block;
    
  }
-
- 
-
  
  .maps_if{
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 5px;
  }
+
+
 main.divaider{
     background-color: azure;
 }
+
+
 main.wrapper{
   background-color:azure;
 }
+
+
  div.VideoElement{  
    display:inline-block; 
    margin-top: 120px;
@@ -114,6 +122,8 @@ main.wrapper{
    border: 7px solid  hsl(244, 100%, 80%);
    background-color: hsl(15, 100%, 80%) ;
  }
+
+
  div.VideoTest{
    display: inline-block;
    margin-top: 50px; 
@@ -123,6 +133,7 @@ main.wrapper{
    background-color:  #66cc00;
  }
  
+
  div.vebinari{
    display:inline-block;
    margin-top: 50px;
@@ -132,6 +143,8 @@ main.wrapper{
    background-color: aqua; 
    border: 7px solid  		rgb(102, 0, 204);
  }
+
+
  div.masala{
    display:inline-block; 
    margin-top: 50px;
@@ -140,19 +153,23 @@ main.wrapper{
    border: 7px solid  hsl(0, 100%, 80%);
    background-color: hsl(50, 100%, 80%) ;
  }
+
+
  
  iframe{
     margin-top: 80px;
     margin-left: 10px;
-    margin-bottom: 45px;
- 
+    margin-bottom: 45px; 
  }
+
+
 
  .contact{
     display: block;
     margin-bottom: 15px;
  }
  
+
  /* main {
    display: block;
    unicode-bidi: isolate;
@@ -161,7 +178,7 @@ main.wrapper{
 
 
 
-    .chat_icon{
+ .chat_icon{
        width: 90px;
        height: 60px;
        position: fixed;
@@ -169,8 +186,9 @@ main.wrapper{
        right: 60px;
        z-index: -1; 
     }
+
   
-    .fa-brands{
+.fa-brands{
       display: inline-block;
       font-size: 25px;
     }
@@ -178,7 +196,7 @@ main.wrapper{
       line-height: 1;
   }
      */
-   .par{    
+.par{    
       display: inline-flex;
       text-align: justify;
       font-size: 20px;
@@ -188,7 +206,7 @@ main.wrapper{
       padding-bottom: 20px;
       gap: 25px;
      }
-     .par1{
+ .par1{
       background-color: cornsilk;
       width: 500px;     
       text-align: justify;
@@ -201,83 +219,135 @@ main.wrapper{
       
      }
   
-     .container_boxs{
+.container_boxs{
       display: flex;
      }
-     .box1{
+     
+     
+     
+.box1{
       width:1200px;
       margin: 10px;
       padding: 20px;
       background-color: palegreen;
       border: 4px solid black;
     }
-    .box2{
+
+
+
+.box2{
       width:1200px;   
       margin: 10px;
       padding: 20px;
       background-color: grey;
       border: 4px solid black;
     }
-    .box3{
+
+
+
+.box3{
       width:1200px;
+      height: 800px;
       margin: 10px;
       padding: 20px;         
       background-color: beige;
       border: 4px solid black;
     }
-    .positioned{
+
+
+
+.positioned{
       display: inline-block;
       position:relative ;
       background-color: peachpuff;
       padding: 20px;
       left:200px;
+   
     }
-    .positioned1{
+
+
+
+.positioned1{
       background-color: aquamarine;
       position: relative;
       top: 0px;
       left:400px;
+    
     }
   
- .Foucault{
+.Foucault{
   float: left;
   width: 150px;
   height:150px;
   margin: 15px;
  }
- .uku{
+
+
+
+.uku{
   float: left;
   width: 220px;
   height:120px;
   margin: 15px;
  }
- .mizkan11{ 
+
+
+
+.mizkan11{ 
    float: left;
   width:220px;
   height:120px;
   margin: 15px;
 }
+
+
+
 .mizkan1{ 
   float: left;
  margin: 15px;
 }
+
+
+
 .drekadobaHuki{
   float: left;
   width:220px;
   height:120px;
   margin: 15px;
 }
+
+
+
 .khakhuni{
   float: left;
   width:150px;
   height:80px;
-  margin: 15px;
- 
+  margin: 15px; 
 }
+
+
+
 .tsonatsoroba{
   float: left;
   width: 150px;
   height:90px;
   margin: 15px;
- 
+ }
+
+#contact{
+  margin-top: 120px;
+  display: flex;
+  justify-content: center;
+}
+
+.addres{
+  margin-top: 120px;
+}
+
+
+#piza{
+  float: left;
+  width: 90px;
+  height:110px;
+  margin: 15px;
 }
